# WakanaPixel

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: wsgraphicsview.h  wsimage.h  wsimageprocessing.h  wsmainwindow.h
src/: main.cpp  wsgraphicsview.cpp  wsimageprocessing.cpp  wsmainwindow.cpp
ui/: wsmainwindow.ui
